# Sycophancy_Resource

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_gpu1.py
datasets/: Fact_Cases_USA_300.csv  Fact_Cases_USA_300.json
outputs/: sycophancy_speculative_variants_gptoss_api_results.json  sycophancy_speculative_variants_gptoss_api_summary.json  sycophancy_speculative_variants_qwen3_results.json  sycophancy_speculative_variants_qwen3_summary.json
scripts/: download_models.py  llm_sycophancy_multi_prompt.py  llm_sycophancy_multi_prompt_v2.py  llm_sycophancy_speculative_variants.py  llm_sycophancy_speculative_variants_gemma3.py  llm_sycophancy_speculative_variants_gemma3_india.py  llm_sycophancy_speculative_variants_glm.py  llm_sycophancy_speculative_variants_glm_india.py  llm_sycophancy_speculative_variants_gptoss.py  llm_sycophancy_speculative_variants_gptoss_api.py  llm_sycophancy_speculative_variants_gptoss_india.py  llm_sycophancy_speculative_variants_gptoss_transformers.py  llm_sycophancy_speculative_variants_qwen3.py  llm_sycophancy_speculative_variants_qwen3_india.py  simple_download_models.py
src/master_interp_analysis/: __init__.py  experiment_runner.py
tools/: run_glm_gpu1.sh
